err/lightcurve-pipeline.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline/database'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline/download'...
Compiling './lib/python3.5/site-packages/lightcurve_pipeline/download/SignStsciRequest.py'...
***   File "./lib/python3.5/site-packages/lightcurve_pipeline/download/SignStsciRequest.py", line 81
    raise RuntimeError, "Error: failed to create keys manager."
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lightcurve_pipeline/ingest'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline/quality'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline/scripts'...
Listing './lib/python3.5/site-packages/lightcurve_pipeline/utils'...
Compiling './lib/python3.5/site-packages/lightcurve_pipeline/utils/utils.py'...
***   File "./lib/python3.5/site-packages/lightcurve_pipeline/utils/utils.py", line 134
    os.chmod(path, 0770)
                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lightcurve_pipeline'...
Listing './lightcurve_pipeline/utils'...
Listing './share'...
Listing './share/python-wheels'...
